bootstrap practice - jumbotron

--- a/balint0925/bootstrap_stuff/index.html
+++ b/balint0925/bootstrap_stuff/index.html
@@ -76,6 +76,15 @@
       <!-- /.container-fluid -->
     </nav>
 
+    <div class="row">
+      <div class="row row-offcanvas row-offcanvas-right">
+        <div class="col-md-12">
+          <div class="jumbotron">
+          <h1>See the World!</h1>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-md-12">
