footer and fixed nav bar

--- a/stephanie/bootstrap_stuff/index.html
+++ b/stephanie/bootstrap_stuff/index.html
@@ -1,155 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  </head>
-  <body>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
+</head>
+
+<body>
     <div class="container">
-        <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
+                    <a class="navbar-brand" href="#">Brand</a>
+                </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Edit Profile</a></li>
-            <li><a href="#">Account Settings</a></li>
-            <li><a href="#">Log Out</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Link</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Edit Profile</a></li>
+                                <li><a href="#">Account Settings</a></li>
+                                <li><a href="#">Log Out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Link</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+        <div class="container" style="padding-top: 75px">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h1 class="display-3">Sewing</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6"> 
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h2>Lorem ipsum</h2>
+                    <p>here here here</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h3>Lorem ipsum</h3>
+                            <p>here here here</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h3>Lorem ipsum</h3>
+                            <p>here here here</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h3>Lorem ipsum</h3>
+                            <p>here here here</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h2>Lorem ipsum</h2>
+                    <p>here here here</p>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin: 25px 50px 25px 50px">
+            <div class="col-md-6">
                 <div class="well well-sm">
-                    <p>sewing sewing sewing sewing sewing sewing sewing</p>
+                    <p>Lorem ipsum dolor sit amet, cum ornatus oportere constituto ad. Falli expetenda cotidieque vix ne. Case periculis principes mei no, sed elit ipsum nullam ei. Ei pro debitis ceteros expetenda, ex admodum expetendis vel. Ex pro eligendi perfecto.</p>
                 </div>
                 <div class="well well-sm">
-                    <p>sewing sewing sewing sewing sewing sewing sewing</p>
+                    <p>Lorem ipsum dolor sit amet, cum ornatus oportere constituto ad. Falli expetenda cotidieque vix ne. Case periculis principes mei no, sed elit ipsum nullam ei. Ei pro debitis ceteros expetenda, ex admodum expetendis vel. Ex pro eligendi perfecto.</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlmoOtQ3XbBh6zIJde6MJVNPwHUPLiaOb_msy_EzHWbnRH61f_" class="img-circle"/>
-            <!--<div class="well well-sm">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlmoOtQ3XbBh6zIJde6MJVNPwHUPLiaOb_msy_EzHWbnRH61f_" class="img-rounded" style="margin-bottom: 50px"/>
+                <!--<div class="well well-sm">
                 <p>sewing sewing sewing sewing sewing sewing sewing</p>
             </div>
             <div class="well well-sm">
                 <p>sewing sewing sewing sewing sewing sewing sewing</p>
             </div>
             </div>-->
-        </div>
-         <div class="row">
-            <div class="col-md-12">
-            <div class="well well-lg">
-                <p>sewing sewing sewing sewing sewing sewing sewing</p>
             </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h2>1</h2>
-                    </div>
-                    <div class="panel-body">
-                        <p>Get fabric</p>
-                    </div>
-                    <div class="panel-footer">
-                        <small>be experiemental</small>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="well well-lg">
+                        <p>Lorem ipsum dolor sit amet, cum ornatus oportere constituto ad. Falli expetenda cotidieque vix ne. Case periculis principes mei no, sed elit ipsum nullam ei. Ei pro debitis ceteros expetenda, ex admodum expetendis vel. Ex pro eligendi perfecto.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h2>2</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h2>1</h2>
+                        </div>
+                        <div class="panel-body">
+                            <p>Get fabric</p>
+                        </div>
+                        <div class="panel-footer">
+                            <small>be experiemental</small>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <p>Body</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">
+                            <h2>2</h2>
+                        </div>
+                        <div class="panel-body">
+                            <p>Body</p>
+                        </div>
+                        <div class="panel-footer">
+                            <small>Footer</small>
+                        </div>
                     </div>
-                    <div class="panel-footer">
-                        <small>Footer</small>
+                </div>
+                <div class="col-md-4">
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <h2>3</h2>
+                        </div>
+                        <div class="panel-body">
+                            <p>Body</p>
+                        </div>
+                        <div class="panel-footer">
+                            <small>Footer</small>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        <h2>3</h2>
-                    </div>
-                    <div class="panel-body">
-                        <p>Body</p>
-                    </div>
-                    <div class="panel-footer">
-                        <small>Footer</small>
-                    </div>
+            <div class="row" style="margin-top: 25px">
+                <div class="col-md-3">
+                    Lorem ipsum dolor sit amet, cum ornatus oportere constituto ad.
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                end
-            </div>
-            <div class="col-md-6">
-                don't run with <span class="glyphicon glyphicon-scissors"></span>
-            </div>
-            <div class="col-md-3">
-                <ul class="nav nav-pills">
-                    <li><a href="#">###</a></li>
-                    <li><a href="#">###</a></li>
-                    <li><a href="#">###</a></li>
-            </div>
+                <div class="col-md-6">
+                    don't run with <span class="glyphicon glyphicon-scissors"></span>
+                </div>
+                <div class="col-md-3">
+                    <ul class="nav nav-pills">
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Lorem</a></li>
+                </div>
 
-        <!--<div class="col-md-12">
+                <!--<div class="col-md-12">
             <ul class="list-group">
                 <li class="list-group-item list-group-item-success">problem solving</li>
                 <li class="list-group-item list-group-item-warning">hands on</li>
@@ -158,13 +195,63 @@
         </div>-->
             </div>
         </div>
+        <!-- BEGIN FOOTER -->
+        <footer class="footer-bs" style="margin-top: 50px">
+            <div class="row">
+                <div class="col-md-3 footer-brand animated fadeInLeft">
+                    <h2>Logo</h2>
+                    <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies.</p>
+                    <p>© 2017 All rights reserved</p>
+                </div>
+                <div class="col-md-4 footer-nav animated fadeInUp">
+                    <h4>Menu —</h4>
+                    <div class="col-md-6">
+                        <ul class="pages">
+                            <li><a href="#">Nature</a></li>
+                            <li><a href="#">Science</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contacts</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2 footer-social animated fadeInDown">
+                    <h4>Follow Us</h4>
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-ns animated fadeInRight">
+                    <h4>Newsletter</h4>
+                    <p>A rover wearing a fuzzy suit doesn’t alarm the real penguins</p>
+                    <p>
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search for...">
+                            <span class="input-group-btn">
+                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-envelope"></span></button>
+                            </span>
+                        </div>
+                        <!-- /input-group -->
+                    </p>
+                </div>
+            </div>
+        </footer>
+        <!-- END FOOTER -->
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  </body>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+            crossorigin="anonymous"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+</body>
+
 </html>
